# kerp

kerp/kerp/: AUTHORS  Doxyfile  Makefile  Makefile.in  acinclude.m4  aclocal.m4  config.h  config.h.in  config.status  configure  configure.in  configure.in.in  kerp.kdevelop  kerp.kdevses  libtool
kerp/kerp/admin/: am_edit
kerp/kerp/autom4te.cache/: output.0  traces.0
kerp/kerp/doc/: Makefile  Makefile.am  Makefile.in
kerp/kerp/doc/en/: .memdump  Makefile  Makefile.am  Makefile.in  index.cache.bz2  index.docbook
kerp/kerp/po/: Makefile  Makefile.in
kerp/kerp/sql/: city.sql  invoice.sql  invoice_line.sql  manualIds.sql  partner.sql  product.sql  product_trans.sql  product_trans_line.sql  province.sql
kerp/kerp/src/: Invoice.cpp  Invoice.h  Makefile  Makefile.am  Makefile.in  formcity.cpp  formcity.h  formcity.ui  global.cpp  global.h  invoicecontrol.cpp  invoicecontrol.h  invoiceline.cpp  invoiceline.h  invoiceview.ui  invoiceview.ui.h  kerp  kerp.cpp  kerp.desktop  kerp.h  kerp.lsm  kerp.moc  kerp_client  kerp_client.cpp  kerpiface.h  kerpiface.kidl  kerpiface_skel.cpp  kerpui.rc  kerpview.cpp  kerpview.h  kerpview.moc  main.cpp  mtable.cpp  mtable.h  partnerform.ui  partnerform.ui.h  pref.cpp  pref.h  pref.moc  tablekeyfilter.cpp  (+1 more)
kerp/kerp/src/.deps/: kerp.Po  kerp_client.Po  kerpiface_skel.Po  kerpview.Po  main.Po  pref.Po
kerp/kerp/templates/: h
